<!--
  ~  Copyright (c) Microsoft. All rights reserved.
  ~  Licensed under the MIT license. See LICENSE file in the project root for full license information.
  -->
<project>
    <parent>
        <groupId>com.microsoft.azure.sdk.iot.provisioning</groupId>
        <artifactId>provisioning</artifactId>
        <version>1.8.1</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.microsoft.azure.sdk.iot.provisioning</groupId>
    <artifactId>${provisioning-service-client-artifact-id}</artifactId>
    <name>Provisioning Service Client</name>
    <version>${provisioning-service-client-version}</version>
    <packaging>jar</packaging>
    <description>The Microsoft Azure IoT Provisioning Service Client SDK for Java</description>
    <url>http://azure.github.io/azure-iot-sdk-java/</url>
    <developers>
        <developer>
            <id>microsoft</id>
            <name>Microsoft</name>
        </developer>
    </developers>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:git@github.com:Azure/azure-iot-sdk-java.git</connection>
        <developerConnection>scm:git:git@github.com:Azure/azure-iot-sdk-java.git</developerConnection>
        <url>https://github.com/Azure/azure-iot-sdk-java.git</url>
    </scm>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.microsoft.azure.sdk.iot</groupId>
            <artifactId>${iot-deps-artifact-id}</artifactId>
            <version>${iot-deps-version}</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish</groupId>
            <artifactId>javax.json</artifactId>
            <version>1.0.4</version>
            <type>jar</type>
        </dependency>
        <!-- test dependencies -->
        <dependency>
            <groupId>org.jmockit</groupId>
            <artifactId>jmockit</artifactId>
            <version>1.24</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit-dep</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <!--This configures the "mvn javadoc:javadoc" created artifacts are outputted to <reportOutputDirectory>/<destDir>-->
                    <reportOutputDirectory>${session.executionRootDirectory}/apidocs</reportOutputDirectory>
                    <destDir>provisioning/provisioning-service-client</destDir>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <rerunFailingTestsCount>2</rerunFailingTestsCount>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>